# timr

./: .bashrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  timrConfig.cmake.in
bu/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  circling  cmake_install.cmake  homing  teleop  timrConfig.cmake  timrTargets.cmake  timr_example1
examples/: robot.json  timr_example1.cpp
include/: timr.hpp
include/timr/: dqpose.hpp  kinematics.hpp
ros2_ws/src/conscious/: CMakeLists.txt  package.xml
ros2_ws/src/conscious/src/: conscious-main.cpp
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/config/: controller.yaml
ros2_ws/src/controller/src/: controller_node.cpp
ros2_ws/src/driver/: CMakeLists.txt  package.xml
ros2_ws/src/driver/config/: driver_node.yaml  driver_node1.yaml  driver_node2.yaml  joint1.yaml  joint2.yaml  joint3.yaml  joint4.yaml  joint5.yaml  joint6.yaml  robot.json  robot_driver.yaml  test.yaml
ros2_ws/src/driver/config/robot1/: joint1.yaml  joint2.yaml  joint3.yaml  joint4.yaml  joint5.yaml  joint6.yaml  robot_driver.yaml
ros2_ws/src/driver/config/robot2/: joint1.yaml  joint2.yaml  joint3.yaml  joint4.yaml  joint5.yaml  joint6.yaml  robot_driver.yaml
ros2_ws/src/driver/include/: driver.hpp  helper.hpp  joint_driver.hpp  robot_driver.hpp
ros2_ws/src/driver/include/driver/: driver.hpp
ros2_ws/src/driver/launch/: run.py  run1.py  run2.py
ros2_ws/src/driver/scripts/: cmd.sh  cmd.txt  setup_can.sh
ros2_ws/src/driver/src/: driver-node.cpp  driver_node.cpp  test.cpp
ros2_ws/src/driver/test/: helper.cpp  joint_driver.cpp  robot_driver.cpp
ros2_ws/src/genesis/: package.xml  setup.cfg  setup.py
ros2_ws/src/gripper/: CMakeLists.txt  package.xml
ros2_ws/src/gripper/config/: config.yaml
ros2_ws/src/gripper/src/: gripper_node.cpp
ros2_ws/src/kinematics/: CMakeLists.txt  package.xml
ros2_ws/src/kinematics/config/: kinematics_node.yaml  robot.json  robot1.yaml
ros2_ws/src/kinematics/include/: dqpose.hpp  kinematics.hpp  kinematics_node.hpp  serial_manipulator.hpp
ros2_ws/src/kinematics/include/kinematics/: kinematics.hpp
ros2_ws/src/kinematics/launch/: run.py
ros2_ws/src/kinematics/scripts/: cmd.sh
ros2_ws/src/kinematics/src/: homing.cpp  kinematics-node.cpp  kinematics_node.cpp
ros2_ws/src/kinematics/test/: kinematics_node.cpp  serial_manipulator.cpp
ros2_ws/src/kinematics_legacy/: CMakeLists.txt  package.xml
ros2_ws/src/kinematics_legacy/config/: robot.json
ros2_ws/src/kinematics_legacy/include/: kinematics.hpp
ros2_ws/src/kinematics_legacy/src/: kinematics-node.cpp
ros2_ws/src/libs/timr_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/libs/timr_msgs/msg/: JointBounds.msg
ros2_ws/src/sensor/: CMakeLists.txt  package.xml
ros2_ws/src/utils/: dqpose.hpp
src/: circling.cpp  teleop.cpp
src/servo/: servo.ino
